[workspace]
resolver = "3"
members = ["crates/payden_controller", "crates/payden_model", "crates/payden"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Leptos
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = { version = "0.7.7" }
leptos_meta = { version = "0.7.7" }
leptos-use = { version = "0.16.2" }
reactive_stores = { version = "0.1.7" }
thaw = { version = "0.4.7", features = ["csr"] }

# Payden
payden = { path = "crates" }
payden_model = { path = "crates/payden_model" }

gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
qrcode = { version = "0.14.1" }
