[workspace]
resolver = "3"
members = ["crates/payden_controller", "crates/payden_model", "crates/payden"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3           # Maximum optimization
debug = true            # Keep debug symbols
debug-assertions = true # Keep debug assertions  
overflow-checks = true  # Keep overflow checks
lto = false             # Link-time optimization (slower compile)
panic = "unwind"        # Keep unwinding for better debugging
codegen-units = 256     # Parallel code generation (faster compile)

[workspace.dependencies]
# Leptos
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = { version = "0.7.7" }
leptos_meta = { version = "0.7.7" }
leptos-use = { version = "0.15.10" }
reactive_stores = { version = "0.1.7" }
thaw = { version = "0.4.7", features = ["csr"] }

# Payden
payden = { path = "crates" }
payden_model = { path = "crates/payden_model" }
payden_controller = { path = "crates/payden_controller" }

# Miden
miden-client = { version = "0.10.0", default-features = false, features = [
  "idxdb",
  "web-tonic",
] }
miden-objects = { version = "0.10.0", default-features = false }

# Random
getrandom = { version = "0.3", default-features = false, features = [
  "wasm_js",
] }
rand_core = { version = "0.9.3", default-features = false }

# Other
gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

# Testing
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
wasm-bindgen-test = { version = "0.3.50" }
wasm-bindgen = { version = "0.2.100" }
