[package]
name = "payden_components"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "preview"
path = "src/preview.rs"

[features]
default = []
icons = []
components = []
banners = []
qr = []

[dependencies]
# Leptos
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true
leptos-use.workspace = true
reactive_stores.workspace = true
thaw.workspace = true

# Payden
payden_model.workspace = true

gloo-net.workspace = true
console_error_panic_hook.workspace = true
qrcode.workspace = true
