[package]
name = "payden_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
# Leptos
leptos.workspace = true
reactive_stores.workspace = true

# Payden
payden_model.workspace = true

# Miden
miden-client.workspace = true
miden-objects.workspace = true

# Other
getrandom.workspace = true
rand_core.workspace = true

[dev-dependencies]
futures.workspace = true
wasm-bindgen-test.workspace = true
wasm-bindgen.workspace = true
